  latter may only occur in 'syntax' specifications or type
  abbreviations.  Before that distinction was only partially
  implemented via type class "logic" vs. "{}".  Potential
  INCOMPATIBILITY in rare cases of improper use of 'types'/'consts'
  instead of 'nonterminals'/'syntax'.  Some very exotic syntax
  specifications may require further adaption (e.g. Cube/Base.thy).

* Pure/Syntax: inner syntax includes (*(*nested*) comments*).

* Pure/Syntax: pretty pinter now supports unbreakable blocks,
  specified in mixfix annotations as "(00...)".

* Pure/Syntax: 'advanced' translation functions (parse_translation
  etc.) may depend on the signature of the theory context being
  presently used for parsing/printing, see also isar-ref manual.

* Pure: tuned internal renaming of symbolic identifiers -- attach
  primes instead of base 26 numbers.

* ML: all output via channels of writeln/warning/error etc. is now
  passed through Output.output.  This gives interface builders a
  chance to adapt text encodings in arbitrary manners (say as XML
  entities); see the hook provided by Output.add_mode.  On the other
  hand, results of Pretty.string_of/str_of (including string_of_term,
  string_of_thm etc.) are still 'raw' (containing funny \<^raw...>
  symbols), which requires separate application of Output.output
  whenever strings are *not* passed on to writeln/warning/error etc.


*** HOL ***

* HOL/record: reimplementation of records. Improved scalability for
  records with many fields, avoiding performance problems for type
  inference. Records are no longer composed of nested field types, but
  of nested extension types. Therefore the record type only grows
  linear in the number of extensions and not in the number of fields.
  The top-level (users) view on records is preserved.  Potential
  INCOMPATIBILITY only in strange cases, where the theory depends on
  the old record representation. The type generated for a record is
  called <record_name>_ext_type.
